k8s/codingnews.info.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codingnews
  labels:
    app: codingnews
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: codingnews
  template:
    metadata:
      labels:
        app: codingnews
    spec:
      containers:
        - name: codingnews
          image: malev/codingnews.info
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: codingnews
  labels:
    service: codingnews
spec:
  type: ClusterIP
  selector:
    app: codingnews
  ports:
    - name: http
      port: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codingnews-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: codingnews.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codingnews
                port:
                  number: 8080
