k8s/killcss.xyz.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: killcss
  labels:
    app: killcss
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: killcss
  template:
    metadata:
      labels:
        app: killcss
    spec:
      containers:
        - name: killcss
          image: malev/killcss.xyz
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: killcss
  labels:
    service: killcss
spec:
  type: ClusterIP
  selector:
    app: killcss
  ports:
    - name: http
      port: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: killcss-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: killcss.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: killcss
                port:
                  number: 8080
