k8s/subdomains.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subdomains
  labels:
    app: subdomains
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: subdomains
  template:
    metadata:
      labels:
        app: subdomains
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: nginx-conf-file
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: nginx-conf-file
          configMap:
            name: nginx-conf-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: subdomains
  labels:
    service: subdomains
spec:
  type: ClusterIP
  selector:
    app: subdomains
  ports:
    - name: http
      port: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subdomain-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: "*.codingnews.info"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: subdomains
                port:
                  number: 80
