k8s/thelounge.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thelounge
  labels:
    app: thelounge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thelounge
  template:
    metadata:
      labels:
        app: thelounge
    spec:
      containers:
        - name: nextcloud
          image: lscr.io/linuxserver/thelounge:v4.3.1-ls96
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 443
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: config
          hostPath:
            path: /home/malev/thelounge/config
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: thelounge
  labels:
    service: thelounge
spec:
  type: ClusterIP
  selector:
    app: thelounge
  ports:
    - name: http
      port: 9000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: irc.killcss.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thelounge
                port:
                  number: 9000
