k8s/transmission.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission
          image: lscr.io/linuxserver/transmission:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9091
              protocol: TCP
            - containerPort: 51413
              protocol: TCP
            - containerPort: 51413
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: config
          hostPath:
            path: /home/malev/data/transmission/config
            type: Directory
        - name: downloads
          hostPath:
            path: /home/malev/data/transmission/downloads
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    service: transmission
spec:
  type: ClusterIP
  selector:
    app: transmission
  ports:
    - name: http
      port: 9091
      protocol: TCP
    - name: torrenthttp
      port: 51413
      protocol: TCP
    - name: torrentudp
      port: 51413
      protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: transmission.killcss.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  number: 9091
